hphp/test/zend/good/ext/json/tests/pass001.1_64bit.php.skipif
<?php
  if (!extension_loaded('json')) die('skip: json extension not available');
  if (PHP_INT_SIZE != 8) die("skip this test is for 64bit platform only");
?>