hphp/test/zend/bad/ext/sqlite3/tests/bug63921-64bit.php.skipif
<?php
if (!extension_loaded('sqlite3')) die('skip');
if (PHP_INT_SIZE < 8) die('skip'); // skip for 32bit builds - there is another test for that
?>